@@ -23,7 +23,10 @@ const readTextFile = (filePath: string): string => fs.readFileSync(filePath, "ut
 
 const writeFile = (filePath: string, contents: string) => {
   fs.mkdirSync(path.dirname(filePath), { recursive: true });
-  fs.writeFileSync(filePath, contents, "utf8");
+  const stagePath = `${filePath}.stage`;
+  fs.rmSync(stagePath, { recursive: true, force: true });
+  fs.writeFileSync(stagePath, contents, "utf8");
+  fs.renameSync(stagePath, filePath);
 };
 
 const prepareStagedOutRoot = (outDir: string): { ok: true; stageOutDir: string } | { ok: false } => {
